--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -11,7 +11,7 @@ displayURL=""
 logoFile="logo.png"
 authors="Dayton, Jetug"
 credits = "MrCrayfish, Hunternif, AzureDoom"
-description="NukaCraft - This is a global mod that opens up the possibility for players to be transported to the wastelands and feel like a wanderer. Collect weapons, find Power Armor sets and don't let the wastelands swallow you up"
+description="NukaCraft - This is a global mod that will bring some nuclear dust to the world of Minecraft. Collect weapons, find Power Armor sets and don't let the wastelands swallow you up"
 
 [[dependencies.nukacraft]]
 modId="forge"
