--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -4,7 +4,7 @@ license="GPL3"
 
 [[mods]]
 modId="nukacraft"
-version="1.2.1"
+version="${file.jarVersion}"
 displayName="Nuka Craft"
 updateJSONURL=""
 displayURL=""
@@ -31,12 +31,18 @@ mandatory=true
 versionRange="[0.4.2,)"
 ordering="NONE"
 side="BOTH"
-#[[dependencies.nukacraft]]
-#modId="nukacraft"
-#mandatory=true
-#versionRange="[1.3.3,)"
-#ordering="AFTER"
-#side="BOTH"
+[[dependencies.nukacraft]]
+modId="chassis_core"
+mandatory=true
+versionRange="[2.2.0,)"
+ordering="AFTER"
+side="BOTH"
+[[dependencies.nukacraft]]
+modId="azurelib"
+mandatory=true
+versionRange="[1.0.23,)"
+ordering="AFTER"
+side="BOTH"
 
 [modproperties.nukacraft]
     catalogueImageIcon=""
