--- a/build.gradle
+++ b/build.gradle
@@ -160,7 +160,7 @@ dependencies {
     // that the dep is a ForgeGradle 'patcher' dependency, and its patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
     minecraft 'net.minecraftforge:forge:1.18.2-40.2.9'
-
+    implementation fg.deobf('curse.maven:curios-309927:3841948')
     implementation fg.deobf("mod.azure.azurelib:azurelib-forge-1.18.2:1.0.23")
     implementation fg.deobf('com.jetug:chassis_core:2.2.1')
 //    implementation fg.deobf("curse.maven:chassis_core-908954:5030459")
