--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -4,7 +4,7 @@ license="GPL3"
 
 [[mods]]
 modId="nukacraft"
-version="0.1.1s"
+version="${file.jarVersion}"
 displayName="Nuka Craft"
 updateJSONURL=""
 displayURL=""
