--- a/src/main/resources/assets/nukacraft/models/item/trapper_chest.json
+++ b/src/main/resources/assets/nukacraft/models/item/trapper_chest.json
@@ -1,6 +1,6 @@
 {
   "parent": "item/generated",
   "textures": {
-    "layer0": "nukacraft:items/armor/trapboots"
+    "layer0": "nukacraft:items/armor/trapper_chest"
   }
 }
