--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'org.parchmentmc.librarian.forgegradle'
 apply plugin: 'org.spongepowered.mixin'
 
-version = '1.18.2-1.3.0-alpha'
+version = "${minecraft_version}-1.4.1-alpha"
 group = 'com.nukateam.nukacraft' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'nukacraft'
 
@@ -46,7 +46,7 @@ minecraft {
 
 //    mappings channel: 'parchment', version: '2022.11.06-1.18.2'
 //    mappings channel: 'official', version: '1.19.2'
-    mappings channel: 'parchment', version: '2022.08.14-1.19.2'
+    mappings channel: mappings_channel, version: mappings_version
 
     // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg') // Currently, this location cannot be changed from the default.
 
@@ -154,6 +154,14 @@ repositories {
     flatDir {
         dirs 'lib'
     }
+    mavenLocal()
+    maven {
+        url "https://www.cursemaven.com"
+    }
+    maven {
+        name = "ModMaven"
+        url = "https://modmaven.dev"
+    }
 }
 
 dependencies {
@@ -161,21 +169,18 @@ dependencies {
     // that the dep is a ForgeGradle 'patcher' dependency, and its patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
 
-    minecraft 'net.minecraftforge:forge:1.19.2-43.2.0'
-    implementation fg.deobf('curse.maven:framework-549225:4718247')
+    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
 
-    implementation fg.deobf("mod.azure.azurelib:azurelib-forge-1.19.2:1.0.41")
+    implementation fg.deobf("mod.azure.azurelib:azurelib-neo-1.20.1:2.0.20")
+    implementation fg.deobf('com.jetug:chassis_core:1.20.1-2.2.1')
+    implementation fg.deobf('com.nukateam:ntgl:1.20.1-1.0.1')
 
-    implementation fg.deobf('com.jetug:chassis_core:1.19.2-2.2.1')
-    implementation fg.deobf('com.nukateam:ntgl:1.19.2-1.0.2')
+    compileOnly fg.deobf("mezz.jei:jei-1.20.1-common-api:${jei_version}")
+    compileOnly fg.deobf("mezz.jei:jei-1.20.1-forge-api:${jei_version}")
+    runtimeOnly fg.deobf("mezz.jei:jei-1.20.1-forge:${jei_version}")
 
-    compileOnly fg.deobf("mezz.jei:jei-1.19.2-common-api:11.4.0.274")
-    compileOnly fg.deobf("mezz.jei:jei-1.19.2-forge-api:11.4.0.274")
-    runtimeOnly fg.deobf("mezz.jei:jei-1.19.2-forge:11.4.0.274")
-
-    implementation fg.deobf('curse.maven:curios-309927:4418021')
-
-//    implementation fg.deobf("curse.maven:chassis_core-908954:5030459")
+    runtimeOnly fg.deobf("top.theillusivec4.curios:curios-forge:${project.curios_version}")
+    compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:${project.curios_version}:api")
 
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
     testAnnotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
