--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,21 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+mod_id=ntgl
+archive_base_name=CGM-Unofficial
+mod_version=1.0.1
+forge_version=47.2.0
+minecraft_version=1.20.1
+mappings_channel=parchment
+mappings_version=2023.09.03-1.20.1
+
+framework_file_id=5180972
+curios_version=5.4.2+1.20.1
+controllable_file_id=4598985
+simple_planes_file_id=4893679
+l2_lib_file_id=5179254
+jei_version=15.2.0.27
+
+creativecore_file_id=5056178
+cmdcam_file_id=5019847
