--- a/build.gradle
+++ b/build.gradle
@@ -175,6 +175,9 @@ dependencies {
     implementation fg.deobf('com.jetug:chassis_core:1.20.1-2.2.1')
     implementation fg.deobf('com.nukateam:ntgl:1.20.1-1.0.1')
 
+    implementation fg.deobf("curse.maven:framework-549225:${framework_file_id}")
+
+
     compileOnly fg.deobf("mezz.jei:jei-1.20.1-common-api:${jei_version}")
     compileOnly fg.deobf("mezz.jei:jei-1.20.1-forge-api:${jei_version}")
     runtimeOnly fg.deobf("mezz.jei:jei-1.20.1-forge:${jei_version}")
