--- a/src/main/resources/assets/nukacraft/models/item/trapper_leggins.json
+++ b/src/main/resources/assets/nukacraft/models/item/trapper_leggins.json
@@ -1,6 +1,6 @@
 {
   "parent": "item/generated",
   "textures": {
-    "layer0": "nukacraft:items/armor/trapleggins"
+    "layer0": "nukacraft:items/armor/trapper_leggins"
   }
 }
