--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'org.parchmentmc.librarian.forgegradle'
 apply plugin: 'org.spongepowered.mixin'
 
-version = "${minecraft_version}-1.4.1-snapshot"
+version = "${minecraft_version}-1.4.1-snapshot-2"
 group = 'com.nukateam.nukacraft' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'nukacraft'
 
@@ -173,12 +173,9 @@ dependencies {
 
     implementation fg.deobf("mod.azure.azurelib:azurelib-neo-1.20.1:2.0.20")
     implementation fg.deobf('com.jetug:chassis_core:1.20.1-2.2.1')
-    implementation fg.deobf('com.nukateam:ntgl:1.20.1-1.0.2')
-
+    implementation fg.deobf('com.nukateam:ntgl:1.20.1-1.0.3')
     implementation fg.deobf("curse.maven:framework-549225:${framework_file_id}")
-
     runtimeOnly fg.deobf("curse.maven:cyanide-541676:4824162")
-
     compileOnly fg.deobf("mezz.jei:jei-1.20.1-common-api:${jei_version}")
     compileOnly fg.deobf("mezz.jei:jei-1.20.1-forge-api:${jei_version}")
     runtimeOnly fg.deobf("mezz.jei:jei-1.20.1-forge:${jei_version}")
