--- a/build.gradle
+++ b/build.gradle
@@ -172,8 +172,13 @@ dependencies {
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
 
     implementation fg.deobf("mod.azure.azurelib:azurelib-neo-1.20.1:2.0.20")
-    implementation fg.deobf('com.jetug:chassis_core:1.20.1-2.2.2')
-    implementation fg.deobf('com.nukateam:ntgl:1.20.1-1.1.0')
+
+//    implementation fg.deobf('com.jetug:chassis_core:1.20.1-2.2.1')
+//    implementation fg.deobf('com.nukateam:ntgl:1.20.1-1.0.3')
+
+    implementation fg.deobf('curse.maven:chassiscore-908954:5312913')
+    implementation fg.deobf('curse.maven:ntgl-998474:5336110')
+
     implementation fg.deobf("curse.maven:framework-549225:${framework_file_id}")
     runtimeOnly fg.deobf("curse.maven:cyanide-541676:4824162")
     compileOnly fg.deobf("mezz.jei:jei-1.20.1-common-api:${jei_version}")
