--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'org.parchmentmc.librarian.forgegradle'
 apply plugin: 'org.spongepowered.mixin'
 
-version = "${minecraft_version}-1.7.0-alpha"
+version = "${minecraft_version}-1.10.0-alpha"
 group = 'com.nukateam.nukacraft' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'nukacraft'
 
@@ -158,10 +158,10 @@ dependencies {
     implementation fg.deobf("mod.azure.azurelib:azurelib-neo-1.20.1:2.0.20")
 //
     implementation fg.deobf('com.jetug:chassis_core:1.20.1-2.5.0')
-//    implementation fg.deobf('com.nukateam:ntgl:1.20.1-1.2.0')
+    implementation fg.deobf('com.nukateam:ntgl:1.20.1-1.2.2')
 
 //    implementation fg.deobf('curse.maven:chassiscore-908954:5395256')
-    implementation fg.deobf('curse.maven:ntgl-998474:5396045')
+//    implementation fg.deobf('curse.maven:ntgl-998474:5396045')
 
     implementation fg.deobf("curse.maven:framework-549225:${framework_file_id}")
     implementation fg.deobf("curse.maven:cyanide-541676:4824162")
