--- a/build.gradle
+++ b/build.gradle
@@ -158,10 +158,10 @@ dependencies {
     implementation fg.deobf("mod.azure.azurelib:azurelib-neo-1.20.1:2.0.20")
 //
     implementation fg.deobf('com.jetug:chassis_core:1.20.1-2.5.0')
-//    implementation fg.deobf('com.nukateam:ntgl:1.20.1-1.2.0')
+    implementation fg.deobf('com.nukateam:ntgl:1.20.1-1.2.2')
 
 //    implementation fg.deobf('curse.maven:chassiscore-908954:5395256')
-    implementation fg.deobf('curse.maven:ntgl-998474:5396045')
+//    implementation fg.deobf('curse.maven:ntgl-998474:5396045')
 
     implementation fg.deobf("curse.maven:framework-549225:${framework_file_id}")
     implementation fg.deobf("curse.maven:cyanide-541676:4824162")
