--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -10,7 +10,7 @@ updateJSONURL=""
 displayURL=""
 logoFile="logo.png"
 authors="Dayton, Jetug"
-credits = "MrCrayfish, Hunternif, AzureDoom"
+credits = "MrCrayfish, AzureDoom"
 description="NukaCraft - This is a global mod that will bring some nuclear dust to the world of Minecraft. Collect weapons, find Power Armor sets and don't let the wastelands swallow you up"
 
 [[dependencies.nukacraft]]
@@ -40,7 +40,7 @@ side="BOTH"
 [[dependencies.nukacraft]]
 modId="ntgl"
 mandatory=true
-versionRange="[1.20.1-1.3.1,)"
+versionRange="[1.20.1-1.5.0,)"
 ordering="AFTER"
 side="BOTH"
 
